# h1_ws

./: .gitattributes  .gitmodules  README.md  frames_2025-11-13_09.53.59.gv
scenes/: h1_no_hands_ros.usd
src/h1_debug/: README.md  package.xml  setup.cfg  setup.py
src/h1_debug/h1_debug/: camera_capture_node.py  pose_detection_node.py  pose_skeleton_node.py  visualization_grid_node.py
src/h1_debug/launch/: debug_nodes.launch.py
src/h1_description/: CMakeLists.txt  package.xml
src/h1_ik/: package.xml  setup.cfg  setup.py
src/h1_msgs/: CMakeLists.txt  package.xml
src/h1_msgs/msg/: PoseDetection.msg  PoseLandmark.msg
