<?xml version="1.0"?>
<package format="2">
  <name>h1_description</name>
  <version>1.0.0</version>
  <description>The Unitree H1 Description Package</description>

  <maintainer email="TODO@email.com" />
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
